# transfomers_tutorials

./: .gitignore  README.md  pyproject.toml
codes/: 1_base_use.py  2_load_specific_model.py  3_text_gen_gpt.py  4_fine_tune_model.py  5_fine_tune_model_custom_tuned.py  6_peft_tuning.py  7_model_representation.py  8_quantization.py
competition/: 2_preprocessing.py  3_naive_bayes_model.py  4_transformer_based_model.py  5_evaluate.py  6_export_onnx.py  8_inference.py
competition/Jigsaw_multilingual_toxic/: EDA.py  train.py
competition/fake_news_detection/: 1_EDA.py  7_quantize.py
